// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnwrappedLoginForm renders a blank form for logging in on pageload 1`] = `
<Div
  className=""
>
  <Form
    className="hmt-form"
    colon={true}
    hideRequiredMark={false}
    layout="horizontal"
    onSubmit={[Function]}
  >
    <FormItem
      hasFeedback={false}
    >
      <Input
        autoFocus={true}
        placeholder="Email"
        prefix={
          <Icon
            style={
              Object {
                "color": "rgba(0,0,0,.25)",
              }
            }
            type="user"
          />
        }
        type="text"
      />
    </FormItem>
    <FormItem
      hasFeedback={false}
    >
      <Input
        placeholder="Password"
        prefix={
          <Icon
            style={
              Object {
                "color": "rgba(0,0,0,.25)",
              }
            }
            type="lock"
          />
        }
        type="password"
      />
    </FormItem>
    <FormItem
      hasFeedback={false}
    >
      <Button
        block={true}
        className="black-button"
        ghost={false}
        htmlType="submit"
        loading={false}
        size="default"
        type="primary"
      >
        Sign In
      </Button>
      <A
        className=""
        href="http://localhost:8000/accounts/password_reset"
        style={
          Object {
            "float": "right",
          }
        }
      >
        Forgot password?
      </A>
    </FormItem>
  </Form>
  <RegisterModal
    isVisible={false}
    onCancel={[Function]}
  />
</Div>
`;

exports[`UnwrappedLoginForm renders an additional registration button if showRegisterButton is provided 1`] = `
<Div
  className=""
>
  <Form
    className="hmt-form"
    colon={true}
    hideRequiredMark={false}
    layout="horizontal"
    onSubmit={[Function]}
  >
    <FormItem
      hasFeedback={false}
    >
      <Input
        autoFocus={true}
        placeholder="Email"
        prefix={
          <Icon
            style={
              Object {
                "color": "rgba(0,0,0,.25)",
              }
            }
            type="user"
          />
        }
        type="text"
      />
    </FormItem>
    <FormItem
      hasFeedback={false}
    >
      <Input
        placeholder="Password"
        prefix={
          <Icon
            style={
              Object {
                "color": "rgba(0,0,0,.25)",
              }
            }
            type="lock"
          />
        }
        type="password"
      />
    </FormItem>
    <FormItem
      hasFeedback={false}
    >
      <Button
        block={true}
        className="black-button"
        ghost={false}
        htmlType="submit"
        loading={false}
        size="default"
        type="primary"
      >
        Sign In
      </Button>
      <Button
        block={true}
        className="black-button"
        ghost={false}
        htmlType="button"
        loading={false}
        onClick={[Function]}
        size="default"
      >
        Don't have an account? Sign up free
        <Icon
          type="arrow-right"
        />
      </Button>
      <A
        className=""
        href="http://localhost:8000/accounts/password_reset"
        style={
          Object {
            "float": "right",
          }
        }
      >
        Forgot password?
      </A>
    </FormItem>
  </Form>
  <RegisterModal
    isVisible={false}
    onCancel={[Function]}
  />
</Div>
`;

exports[`UnwrappedLoginForm renders large buttons if largeButtons is true 1`] = `
<Div
  className=""
>
  <Form
    className="hmt-form"
    colon={true}
    hideRequiredMark={false}
    layout="horizontal"
    onSubmit={[Function]}
  >
    <FormItem
      hasFeedback={false}
    >
      <Input
        autoFocus={true}
        placeholder="Email"
        prefix={
          <Icon
            style={
              Object {
                "color": "rgba(0,0,0,.25)",
              }
            }
            type="user"
          />
        }
        type="text"
      />
    </FormItem>
    <FormItem
      hasFeedback={false}
    >
      <Input
        placeholder="Password"
        prefix={
          <Icon
            style={
              Object {
                "color": "rgba(0,0,0,.25)",
              }
            }
            type="lock"
          />
        }
        type="password"
      />
    </FormItem>
    <FormItem
      hasFeedback={false}
    >
      <Button
        block={true}
        className="black-button"
        ghost={false}
        htmlType="submit"
        loading={false}
        size="large"
        type="primary"
      >
        Sign In
      </Button>
      <Button
        block={true}
        className="black-button"
        ghost={false}
        htmlType="button"
        loading={false}
        onClick={[Function]}
        size="large"
      >
        Don't have an account? Sign up free
        <Icon
          type="arrow-right"
        />
      </Button>
      <A
        className=""
        href="http://localhost:8000/accounts/password_reset"
        style={
          Object {
            "float": "right",
          }
        }
      >
        Forgot password?
      </A>
    </FormItem>
  </Form>
  <RegisterModal
    isVisible={false}
    onCancel={[Function]}
  />
</Div>
`;
